[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "caffeine-py"
version = "0.1.0"
description = "System Awake Script"
authors = [{ name = "erujs" }]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

dependencies = []

[project.scripts]
caffeine-py = "caffeine.main:main"
caffeine-build = "caffeine.build:main"